# mcp-browser-use

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/mcp_browser_use/: __init__.py  server.py  tools.py
